--- a/style.css
+++ b/style.css
@@ -111,9 +111,18 @@ h5 {
 } */
 
 .home {
+  position: relative;
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: 100px 1fr max-content;
+}
+
+.home::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-image: url("https://res.cloudinary.com/dkixdpdpk/image/upload/c_scale,w_200/v1603749817/mancha2_lq5has.svg");
 }
 
 .header {
