--- a/style.css
+++ b/style.css
@@ -119,10 +119,9 @@ h5 {
 
 .home::after {
   position: absolute;
-  content: "";
-  width: 100%;
-  height: 100%;
-  background-image: url("https://res.cloudinary.com/dkixdpdpk/image/upload/c_scale,w_200/v1603749817/mancha2_lq5has.svg");
+  content: url(./assets/linea-curveada.png);
+  right: -30px;
+  top: -40px;
 }
 
 .header {
@@ -247,8 +246,27 @@ nav {
   fill: #e8ccff;
 }
 
+.footer p {
+  position: relative;
+}
+
+.footer p::after {
+  content: url(./assets/linea-doble.png);
+  position: absolute;
+  top: -20px;
+  left: -20px;
+  z-index: -1;
+}
+
 /*** Acerca de mi***/
-.layout {
+.layout.acercade {
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: 100px 1fr max-content;
+}
+
+.layout.acercade {
   position: relative;
   display: grid;
   grid-template-columns: repeat(6, 1fr);
@@ -256,6 +274,7 @@ nav {
 }
 
 .biografia {
+  position: relative;
   grid-column: 1 / 2;
   grid-row: 2 / 3;
   align-self: center;
@@ -267,11 +286,32 @@ nav {
   justify-content: center;
   padding: 50px 20px; */
 }
-.yo {
+
+.biografia::after {
+  content: url(./assets/linea-doble.png);
+  position: absolute;
+  top: -20px;
+  left: -20px;
+  z-index: -1;
+}
+
+.layout.acercade figure {
+  position: relative;
   grid-column: 3 / 6;
   grid-row: 2 / 3;
   align-self: center;
   justify-self: end;
+}
+
+.yo {
   width: 325px;
   height: 324px;
+}
+
+.layout.acercade figure::after {
+  position: absolute;
+  content: url(https://res.cloudinary.com/dkixdpdpk/image/upload/v1603749810/Copia_de_acercademi_tqie7p.png);
+  transform: scale(0.7);
+  top: 10px;
+  right: 0;
 }
