--- a/style.css
+++ b/style.css
@@ -315,3 +315,26 @@ nav {
   top: 10px;
   right: 0;
 }
+
+/*** Diseño***/
+
+.categoria__titulo {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+  align-self: end;
+  justify-self: center;
+}
+
+.categoria__menu {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+  align-self: end;
+  justify-self: center;
+}
+
+nav {
+  grid-column: 1 / 2;
+  grid-row: 3 / 4;
+  align-self: end;
+  padding: 80px;
+}
