--- a/style.css
+++ b/style.css
@@ -311,30 +311,26 @@ ul li {
 }
 
 .categoria__nav {
-  padding: 2rem;
+  padding-top: 2rem;
   flex: 1; /* 3 */
 }
 
 .categoria__nav ul {
-  padding-top: 4rem; /* 4 */
+  padding-top: 4rem;
 }
 
 .categoria__proyectos {
   flex: 5; /* 3 */
+  display: grid;
 }
 
 .categoria__titulo {
   text-align: center;
 }
 
-/* .categoria__menu {
-} */
-.categoria__proyectos {
-  display: grid;
-}
-
 .categoria__proyectos section ul {
   display: flex;
+  gap: 20px;
 }
 
 /* TODO */
